--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/IlyaZyablov/ra16-diploma#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "izitoast": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
